`MOCK_AUTH` is enabled.

--- a/env.example
+++ b/env.example
@@ -7,6 +7,9 @@ PORT=4000
 LOG_LEVEL=info
 JWT_SECRET=replace-with-secure-secret
 
+### Mocking ###
+MOCK_AUTH=true
+
 ### AI Service Integration ###
 AI_SERVICE_BASE_URL=https://api.openai.com/v1
 AI_SERVICE_API_KEY=sk-your-api-key
