--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "@google/generative-ai": "^0.3.1",
     "winston": "^3.13.0"
   },
   "devDependencies": {
