--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "eslint": "^9.8.0",
     "nodemon": "^3.1.0",
+    "vercel": "^48.10.0",
     "vitest": "^3.2.4"
   },
   "engines": {
