--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "NODE_ENV=test vitest"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.3.1",
     "@supabase/supabase-js": "^2.45.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -18,7 +19,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "@google/generative-ai": "^0.3.1",
+    "nodemailer": "^7.0.10",
     "winston": "^3.13.0"
   },
   "devDependencies": {
@@ -35,4 +36,3 @@
     ]
   }
 }
-
